tests/rosetta/out/Smalltalk/chaos-game.out
/tmp/chaos-game.st:9: parse error, expected ']'
