tests/rosetta/out/Smalltalk/chaos-game.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| width height iterations grid y line x randInt next seed vertices px py i r idx v |
width := 60.
height := ((width asFloat) * 0.86602540378) asInteger.
iterations := 5000.
grid := {}.
y := 0.
[(y < height)] whileTrue: [.
line := {}.
x := 0.
[(x < width)] whileTrue: [.
line := line copyWith: ' '.
x := (x + 1).
].
.
grid := grid copyWith: line.
y := (y + 1).
].
.
randInt := [:s :n | next := (((((s * 1664525)) + 1013904223)) % 2147483647).
{next. (next % n)}. ].
seed := 1.
vertices := {{0. (height - 1)}. {(width - 1). (height - 1)}. {(width / 2) asInteger. 0}}.
px := (width / 2) asInteger.
py := (height / 2) asInteger.
i := 0.
[(i < iterations)] whileTrue: [.
r := randInt value: seed value: 3.
seed := r at: 0.
idx := r at: 1 asInteger.
v := vertices at: idx.
px := (((px + (v at: 0))) / 2) asInteger.
py := (((py + (v at: 1))) / 2) asInteger.
((((((((px >= 0)) and: [((px < width))])) and: [((py >= 0))])) and: [((py < height))])) ifTrue: [
grid at: py at: px put: '*'.
] .
i := (i + 1).
].
.
y := 0.
[(y < height)] whileTrue: [.
line := ''.
x := 0.
[(x < width)] whileTrue: [.
line := (line + (grid at: y at: x)).
x := (x + 1).
].
.
Transcript show: (line) printString; cr.
y := (y + 1).
].
.
